plugins {
    id 'java'
}

sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

dependencies {
    implementation ('org.junit.jupiter:junit-jupiter-api')
    implementation ('org.junit.jupiter:junit-jupiter-engine')
    implementation ('org.junit.jupiter:junit-jupiter-params')
    implementation ('org.assertj:assertj-core')
    implementation ('org.mockito:mockito-core')
    implementation ('org.mockito:mockito-junit-jupiter')
    compileOnly ('org.projectlombok:lombok')
    annotationProcessor ('org.projectlombok:lombok')
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.with {
        encoding = 'UTF-8'
    }
}